--- a/notebooks/Crop_data_prep.ipynb
+++ b/notebooks/Crop_data_prep.ipynb
@@ -665,7 +665,7 @@
       "..          ...        ...       ...         ...   ...\n",
       "95    22.683191  83.463583  6.604993  194.265172  rice\n",
       "96    21.533463  82.140041  6.500343  295.924880  rice\n",
-      "97    21.408658  83.329319  5.935745  287.576694  rice\n",
+      "97    21.408658  83.329319  5.935745  287.576693  rice\n",
       "98    26.543481  84.673536  7.072656  183.622266  rice\n",
       "99    23.359054  83.595123  5.333323  188.413665  rice\n",
       "\n",
@@ -959,7 +959,7 @@
       "2295    27.359116  84.546250  6.387431   90.812505  banana\n",
       "2296    28.010680  76.528081  5.891414  103.704078  banana\n",
       "2297    28.672089  82.207936  5.725419   94.379875  banana\n",
-      "2298    27.345851  78.487383  6.281070   92.155243  banana\n",
+      "2298    27.345851  78.487384  6.281070   92.155243  banana\n",
       "2299    29.507046  78.205856  5.507642   98.125658  banana\n",
       "\n",
       "[100 rows x 5 columns]\n",
@@ -1030,7 +1030,7 @@
       "Index: []\n",
       "      temperature   humidity        ph    rainfall  label\n",
       "2400    22.750888  90.694892  5.521467  110.431786  apple\n",
-      "2401    23.849401  94.348150  6.133221  114.051250  apple\n",
+      "2401    23.849401  94.348150  6.133221  114.051249  apple\n",
       "2402    22.608010  94.589006  6.226290  116.039659  apple\n",
       "2403    21.186674  91.134357  6.321152  122.233323  apple\n",
       "2404    23.410447  91.699133  5.587906  116.077793  apple\n",
@@ -1161,7 +1161,7 @@
       "     temperature   humidity        ph    rainfall label\n",
       "700    25.524690  72.248508  6.002525  151.886997  jute\n",
       "701    26.591050  82.941641  6.033485  161.247000  jute\n",
-      "702    25.297818  86.887054  7.121934  196.624951  jute\n",
+      "702    25.297818  86.887053  7.121934  196.624951  jute\n",
       "703    25.721009  88.165136  6.207460  175.608670  jute\n",
       "704    23.584193  72.004608  6.090060  190.424216  jute\n",
       "..           ...        ...       ...         ...   ...\n",
@@ -1253,12 +1253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_57667/1588780910.py:2: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  new_crop = pd.concat([new_crop, crop[crop['label'] == label]])\n"
+     ]
+    }
+   ],
    "source": [
     "for label in extract_labels:\n",
-    "    new_crop = new_crop.append(crop[crop['label'] == label])"
+    "    new_crop = pd.concat([new_crop, crop[crop['label'] == label]])"
    ]
   },
   {
@@ -1268,7 +1277,7 @@
    "outputs": [],
    "source": [
     "for label in extract_labels:\n",
-    "    new_fert = new_fert.append(fert[fert['Crop'] == label].iloc[0])"
+    "    new_fert = pd.concat([new_fert, fert[fert['Crop'] == label].iloc[0].to_frame().T])"
    ]
   },
   {
@@ -1686,7 +1695,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1700,7 +1709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
