--- a/notebooks/Crop_data_prep.ipynb
+++ b/notebooks/Crop_data_prep.ipynb
@@ -1253,14 +1253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_57667/1588780910.py:2: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\zinee\\AppData\\Local\\Temp\\ipykernel_15976\\1588780910.py:2: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  new_crop = pd.concat([new_crop, crop[crop['label'] == label]])\n"
      ]
     }
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
        "[2200 rows x 5 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1673,7 @@
        "95       coffee  100   20   30  5.5"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,16 +1688,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_crop.to_csv('../Data-raw/MergeFileCrop.csv')\n",
-    "new_fert.to_csv('../Data-raw/FertilizerData.csv')"
+    "new_crop.to_csv('../Data-processed/MergeFileCrop.csv')\n",
+    "new_fert.to_csv('../Data-processed/FertilizerData.csv')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python (yield_prediction_env)",
    "language": "python",
-   "name": "python3"
+   "name": "yield_prediction_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1709,7 +1709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
